--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: My First Post! Hello World!
-slug: my-first-post
-date: 2020-03-21
-featureImage: nature.jpg
-excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
+title: Do I Want To Keep Doing This?
+slug: my-third-post
+date: 2020-03-23
+featureImage: river.jpg
+excerpt: Enim nunc amet, eu, vitae nunc. Et in elementum aliquet nunc mauris, nulla. Convallis viverra neque quam mi sit.
 ---
 
 # Heading 1
@@ -36,7 +36,7 @@ Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt
 - Showcase and embed your work with
 - Showcase and embed your work with
 
-![Nature Photo](nature.jpg)
+![River Photo](river.jpg)
 
 ```html
 <div>Hello World</div>
