--- a/src/posts/my-fourth-post/index.mdx
+++ b/src/posts/my-fourth-post/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: My First Post! Hello World!
-slug: my-first-post
-date: 2020-03-21
-featureImage: nature.jpg
-excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
+title: My Fourth Post... So Long For Now
+slug: my-fourth-post
+date: 2020-03-24
+featureImage: island.jpg
+excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit nisl, leo et. Vitae hendrerit vivamus cum ullamcorper hendrerit et arcu, elit ornare.
 ---
 
 # Heading 1
@@ -36,7 +36,7 @@ Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt
 - Showcase and embed your work with
 - Showcase and embed your work with
 
-![Nature Photo](nature.jpg)
+![Island Photo](island.jpg)
 
 ```html
 <div>Hello World</div>
