--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: My First Post! Hello World!
-slug: my-first-post
-date: 2020-03-21
-featureImage: nature.jpg
-excerpt: Habitant pharetra, urna ipsum interdum risus nunc. Venenatis orci, sagittis, elementum urna.
+title: My Second Post! I'm Liking This...
+slug: my-second-post
+date: 2020-03-22
+featureImage: mountains.jpg
+excerpt: Integer morbi purus in morbi nisl lobortis congue malesuada. Id turpis posuere nam habitasse at mus viverra.
 ---
 
 # Heading 1
@@ -36,7 +36,7 @@ Lorem ipsum dolor sit amet, ~~consectetur adipiscing elit~~. Ut tortor tincidunt
 - Showcase and embed your work with
 - Showcase and embed your work with
 
-![Nature Photo](nature.jpg)
+![Mountains Photo](mountains.jpg)
 
 ```html
 <div>Hello World</div>
