--- a/src/posts/my-first-post/index.mdx
+++ b/src/posts/my-first-post/index.mdx
@@ -1,18 +1,27 @@
 ---
-title: So Long. Everything that needs to be written already has
-slug: so-long-everything-that-needs-to-be-written-already-has
+title: Everything that needs to be written already has.
+slug: everything-that-needs-to-be-written-already-has
 date: 2020-10-04 14:46:23
 featureImage: nature.jpg
 author: C.W. Moon
-excerpt: Why should I try to write anything if everyone else already has.
+excerpt: Ever catch yourself saying a cliche and wondering if you're basic?  We're all basic. Programmed from a select number of DNA cells and trained to have the same cultural context as those around us. What's wrong with that? I can think of a few reasons...
 ---
 
-Why should I try to write anything if everyone else already has.
+Ever catch yourself saying a cliche and wondering if you're basic?  We're all basic. Programmed from a select number of DNA cells and trained to have the same cultural context as those around us. What's wrong with that? 
+I can think of a few reasons...
 
 ## Jinx, you owe me a soda.
 
-Anyone remember playing that game? 
+Anyone remember playing that game? My friends would sit outside their hands frozen lips numb trying to guess the next word out of your mouth just to get under your goosebumped skin. 
+
+## Why does being unoriginal make us so angry?
+
+Plenty of other plants and animals are unoriginal.  Take a school of shard fish for example.  Shard are a nasty greasy fish that like to live in the lakes and rivers of Mid-Missouri.  If you catch one, your hand is covered in a sticky white goo that is just as unpleasant as your imagining. In the pack of fifty or so fish, not one stands out.  Not one cares.  They are happy living together in their flow of monotony.
+
+## You might be thinking that the fish don't think themselves the same.
+
+And I suppose you might be right!  There is a possibility each fish sees themselves as a totally unique oily snowflake amongst the tother fishes. But I think it's more likely that fish spend most of their time thinking aabout eating and finding a mate and little about the differences between themselves and the fish beside them.  They don't care if they are a little fish in a big pond or a big fish in a little pond.  They care if the pond has enough to eat and enough fish to mate with.  
+
+Us humans are very different.  I compare myself constantly with the nearest organism beside me. Of all the species on earth, we are the only ones who could become jealous of a plant for the relaxing life it lieves catching aise and sucking nutrients from the soil. 
 
 
-
-## 
